@@ -1,4 +1,13 @@
-2005-01-10  Sarfraaz Ahmed <asarfraaz@novell.com>
+2005-01-10  Not Zed  <NotZed@Ximian.com>
+
+	* mail/mail-stub.c (mail_stub_read_args): long/int ->uint32.
+	(mail_stub_return_data): "
+
+	* camel/camel-stub.c (stub_send_internal): uint32 should be a
+	uint32, not a long.
+	(stub_send_internal): same for uint32array and int
+
+2004-12-21  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* camel/camel-exchange-journal.c : Added a new file for handling
 	offline journaling. Implemented the class members.
